small readme add

--- a/README
+++ b/README
@@ -2,6 +2,7 @@ combs_sync - a simple ruby script that uses git to keep your files in sync acros
 
 Setup:
 
+get the script:
 git clone git@github.com:wcombs/combs_sync.git /code/dir/combs_sync
 
 setup shared ssh keys to server box, be sure you can ssh server_machine_hostname with no problems
